fixed textarea being resizeable and too tall

--- a/editor.css
+++ b/editor.css
@@ -1,3 +1,5 @@
+/* very messy, but no spaghetti logic, so it's excusable */
+
 body {
 	font-family: monospace, monospace;
 	overflow: hidden;
@@ -364,7 +366,7 @@ option::checkmark {
 	left: 3px;
 	top: 3px;
 	width: calc(100% - 6px);
-	height: calc(100% - 6px);
+	height: calc(100% - 12px);
 	border: none;
 
 	background-color: black;
@@ -373,5 +375,6 @@ option::checkmark {
 
 	overflow-x: auto;
 	overflow-y: auto;
-}
 
+	resize: none;
+}
